--- a/My_Theme_Collection/Winter_Returns.theme.css
+++ b/My_Theme_Collection/Winter_Returns.theme.css
@@ -680,7 +680,7 @@
     margin-top: 15px;
 }
 
-.theme-dark .bda-slist li {
+.theme-dark .bd-addon-list .bd-addon-card {
     background-color: rgba(0, 0, 0, 0.37);
     color: white;
     border-color: transparent;
@@ -838,7 +838,8 @@
     background-color: rgba(107, 130, 206, 0.093);
 }
 
-.selected-aXhQR6 .layout-2DM8Md {
+.selected-aXhQR6 .layout-2DM8Md,
+.categoryItem-3zFJns.selectedCategoryItem-3X8ujp .itemInner-3gVXMG {
     background-color: rgba(107, 130, 206, 0.273);
 }
 
@@ -1146,7 +1147,7 @@
     background-color: transparent;
 }
 
-.menu-Sp6bN1,
+.styleFixed-sX-yHV,
 .theme-dark .container-VSDcQc .sectionTag-pXyto9 {
     border-radius: 0 0 10px 10px;
     box-shadow: none;
@@ -1154,7 +1155,7 @@
     padding: 6px 9px;
 }
   
-.separator-2zcjq8 {
+.separator-2I32lJ {
     border: none;
 }
   
@@ -1277,7 +1278,7 @@
     display: none;
 }
 
-.itemBase-1Qj4z6:hover {
+.colorDefault-2K3EoJ.focused-3afm-j {
     background-color: rgba(0, 0, 0, 0.20);
     color: white !important;
 }
@@ -1392,8 +1393,9 @@
     background-color: #6b82ce;
 }
 
-.contextMenu-HLZMGh,
-.container-3cGP6G {
+.styleFlexible-wGDiIL,
+.container-3cGP6G,
+.submenu-2-ysNh {
     border-radius: 12px;
     background-color: black;
     border: 2px solid #6b82ce;
@@ -1433,7 +1435,7 @@
 }
 
 .theme-dark .jumpButton-3DTcS_,
-.theme-dark .jumpButton-Ia2hRJ,
+.theme-dark .jumpButton-1ol35X,
 .theme-dark .collapseButton-oSNpPX {
     background-color: #6b82ce;
     color: white !important;
@@ -1521,13 +1523,12 @@
     border-radius: 5px;
 }
 
-.theme-dark .searchResult-3pzFAB.expanded-v2Szsz {
+.theme-dark .searchResult-2N9RV4.expanded-ovgtuV {
     border: none;
     background-color: rgba(0, 0, 0, .3);
 }
 
-.tab-2Ixsn0, 
-.totalResults-gxvzgw {
+.tab-EiCZG6, .totalResults-1yK_Ym {
     opacity: 0.6;
 }
 
@@ -1601,43 +1602,43 @@
     color: white;
 } 
 
-.theme-dark .searchHeader-1l-wpR {
+.theme-dark .searchHeader-1EzJGH {
     background-color: transparent;
     box-shadow: none;
     color: white;
 }
 
-.theme-dark .searchResultsWrap-2DKFzt {
+.theme-dark .searchResultsWrap-3-pOjs {
     background: linear-gradient(135deg, #6b82ce 0%, #000000 100%);
 } 
 
-.theme-dark .channelSeparator-1X1FuH:before {
+.theme-dark .channelSeparator-dTqJ4K:before {
     border-color: transparent;
 }
 
-.theme-dark .channelSeparator-1X1FuH .channelName-1QajIf {
+.theme-dark .channelSeparator-1X1FuH .channelName-wvgELL {
     background-color: transparent;
     border: 2px solid black;
     padding: 12px;
     border-bottom: none;
 }
 
-.theme-dark .searchResult-3pzFAB:before,
-.theme-dark .searchResult-3pzFAB:after {
+.theme-dark .searchResult-2N9RV4:before,
+.theme-dark .searchResult-2N9RV4:after {
     background-image: none;
 }
 
-.theme-dark .searchResult-3pzFAB .searchResultMessage-2VxO12.hit-NLlWXA {
+.theme-dark .searchResult-2N9RV4 .searchResultMessage-30QnSN.hit-1CXhXT {
     border: none;
 }
 
-.theme-dark .searchResult-3pzFAB .hit-NLlWXA {
+.theme-dark .searchResult-2N9RV4 .hit-NLlWXA {
     background-color: rgba(0, 0, 0, 0.39);
     box-shadow: none;
     opacity: 0.7;
 }
 
-.theme-dark .searchResult-3pzFAB.expanded-v2Szsz .searchResultMessage-2VxO12.hit-NLlWXA {
+.theme-dark .searchResult-2N9RV4.expanded-ovgtuV .searchResultMessage-30QnSN.hit-1CXhXT {
     border-top: 2px solid black;
     border-bottom: 2px solid black;
     background-color: black;
@@ -2076,7 +2077,6 @@
 
 /* Emote Section */
 
-
 .navButtonActive-3RPAJy {
     background: rgba(0, 0, 0, 0.79);
     border-left: none;
@@ -2097,14 +2097,21 @@
     border: 2px solid rgba(255, 255, 255, 0.15);
 }
 
-.contentWrapper-2txmjs {
+.contentWrapper-2txmjs, .emojiPicker-3PwZFl {
     background: linear-gradient(135deg, #6b82ce 0%, #000000 100%);
 }
 
 .inspector-sdLnLS {
     background: none;
 }
+.colorDefault-2K3EoJ .checkbox-3s5GYZ, 
+.colorDefault-2K3EoJ .radioSelection-1HmrQS {
+  color: rgba(0, 0, 0, .26) !important;
+}
 
+.colorDefault-2K3EoJ.focused-3afm-j .check-1JyqgN {
+  color: white;
+}
 .emojiPicker-3PwZFl .header-8ilj5e {
     border: none;
     box-shadow: none;
@@ -2132,7 +2139,6 @@
     border-style: solid;
     background: none;
 }
-
 
 /* -- */
 
